# sonobe

./: .gitignore  Cargo.toml
cli/: Cargo.toml  circom_config.json
cli/src/: gen_params.rs  main.rs  settings.rs
examples/: external_inputs.rs  full_flow.rs  multi_inputs.rs  sha256.rs  utils.rs
folding-schemes/: Cargo.toml
folding-schemes/src/commitment/: kzg.rs  mod.rs
folding-schemes/src/folding/nova/: circuits.rs  decider_eth.rs  mod.rs
folding-schemes/src/frontend/: mod.rs
folding-schemes/src/frontend/circom/: mod.rs  utils.rs
solidity-verifiers/: Cargo.toml
solidity-verifiers/src/: lib.rs
solidity-verifiers/src/verifiers/: nova_cyclefold.rs
wasm-prover/: Cargo.toml  babel.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  wasm_build.sh
wasm-prover/example/: package-lock.json  package.json
wasm-prover/example/src/: App.tsx  worker.ts
wasm-prover/src/: circuit.rs  lib.rs  wasm.rs
wasm-prover/tests/: external_inputs.test.ts
