[package]
name = "sonobe-wasm-prover"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-poly = "^0.4.0"
ark-std = "0.4.0"
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = [
    "r1cs",
    "sponge",
    "crh",
] }
ark-grumpkin = { version = "0.4.0" }
ark-poly-commit = "^0.4.0"
ark-relations = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false } # this is patched at the workspace level
ark-snark = { version = "^0.4.0" }
ark-serialize = "^0.4.0"
# ark-circom = { git = "https://github.com/arnaucube/circom-compat" }
thiserror = "1.0"
rayon = "1.8.0"
num-bigint = "0.4"
num-integer = "0.1"
color-eyre = "=0.6.2"
ark-bn254 = { version = "0.4.0" }
ark-groth16 = "0.4.0"
# tmp imports for espresso's sumcheck
espresso_subroutines = { git = "https://github.com/EspressoSystems/hyperplonk", package = "subroutines" }

getrandom = { version = "0.2", features = ["js"] }
folding-schemes = { path = "../folding-schemes" }
# # ark-circom = { git = "https://github.com/SoraSuegami/circom-compat.git" }
rand = "0.8.5"
hex = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde_json = "1.0"
wasm-bindgen = "0.2.92"
js-sys = "0.3.68"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.6"
wasm-bindgen-rayon = "1.2"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
wasm-bindgen = "0.2"


[features]
default = ["parallel", "ark-bn254/r1cs", "ark-grumpkin/r1cs"]

parallel = [
    "ark-std/parallel",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-crypto-primitives/parallel",
    "ark-r1cs-std/parallel",
]

# ark-circom-wasm = { package = "ark-circom", git = "https://github.com/arnaucube//circom-compat", default-features = false, features = [
#     "circom-2",
#     "wasm",
# ] }
# wasmer = { version = "2.3.0", features = ["js-default"] }

# [dev-dependencies]
# ark-pallas = { version = "0.4.0", features = ["r1cs"] }
# ark-vesta = { version = "0.4.0", features = ["r1cs"] }
# ark-bn254 = { version = "0.4.0", features = ["r1cs"] }
# ark-grumpkin = { version = "0.4.0", features = ["r1cs"] }
# rand = "0.8.5"
# tracing = { version = "0.1", default-features = false, features = [
#     "attributes",
# ] }
# tracing-subscriber = { version = "0.2" }

# [features]
# default = ["parallel"]
# light-test = []

# parallel = [
#     "ark-std/parallel",
#     "ark-ff/parallel",
#     "ark-ec/parallel",
#     "ark-poly/parallel",
#     "ark-crypto-primitives/parallel",
#     "ark-r1cs-std/parallel",
# ]


# [[example]]
# name = "sha256"
# path = "../examples/sha256.rs"

# [[example]]
# name = "multi_inputs"
# path = "../examples/multi_inputs.rs"

# [[example]]
# name = "external_inputs"
# path = "../examples/external_inputs.rs"
